# mecs

./: .gitignore  Cargo.toml  README.md
dev/: project.geany
src/: component.rs  entity.rs  lib.rs  util.rs  world.rs
src/component/: dyn_storage.rs  impl_macro.rs  test.rs
src/entity/: test.rs
src/world/: entity_id.rs  iter.rs  pred.rs
