[package]
name        = "mecs"
version     = "0.1.0"
authors     = ["filipe <filipejacintorodrigues1@gmail.com>"]
edition     = "2018"
description = "An ecs library with a focus on iteration performance"
license     = "MIT"

[dependencies]

# Traits
err-derive  = "0.2"
derive_more = "0.99"

# Serialize
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default         = []
serde-serialize = ["serde"]
