[package]
name         = "mecs"
version      = "0.1.0"
authors      = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition      = "2018"
description  = "An ecs library with a focus on iteration performance"
license      = "MIT"
repository   = "https://github.com/Zenithsiz/mecs"
readme       = "README.md"
keywords     = ["ecs",]
categories   = ["algorithms",]

[dependencies]

# Serialize
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default         = []
serde-serialize = ["serde"]
